addons/istio/kiali/templates/kiali-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali-routing
  namespace: istio-system
spec:
  hosts:
  - "*"
  gateways:
  - ingress-gateway-config # Precisa ser o nome exato que você deu no metadata do gateway.yaml
  http:
  - match:
    - uri:
        prefix: /kiali
    route:
    - destination:
        host: kiali.istio-system.svc.cluster.local
        port:
          number: 20001
